fix(overflow-bar): allow content to overflow

--- a/packages/components/src/css/component/OverflowBar.module.scss
+++ b/packages/components/src/css/component/OverflowBar.module.scss
@@ -3,7 +3,6 @@
     min-width: min-content;
     flex-basis: 0;
     flex-grow: 2;
-    overflow: hidden;
 
     &.alignStart {
         justify-content: flex-start;
